--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       with:
-        args: "deploy --dir=public --prod --message='Deploy from GitHub Actions'"
+        args: deploy --dir=public --prod
     - name: Stop WordPress
       uses: getshifter/actions-stop@v2
       env:
